Update table_tools so segment and drop down align correctly
We can consolidate some styles into table_tools, no need for the
duplication. The existing classes are still there so users can
customize if need be. Removed table_tools JS as its unnecessary and
causes issues with aligning a dropdown and segment control together.
Further where this was added posed no benefit since the content wasn’t
long enough to wrap (edge case, no need to handle).

--- a/app/assets/stylesheets/active_admin/components/_table_tools.scss
+++ b/app/assets/stylesheets/active_admin/components/_table_tools.scss
@@ -1,25 +1,31 @@
 .table_tools {
-  @include clearfix;
   margin-bottom: 15px;
 }
 
 a.table_tools_button {
   @include light-button;
   font-weight: normal;
-  padding: 4px 10px;
 }
 
 .table_tools_segmented_control {
   @include clearfix;
-  list-style-type: none;
+  display: inline-block;
+  list-style: none;
   margin: 0;
   padding: 0;
+  vertical-align: bottom; // required so this aligns correctly with .dropdown_menu
+
+  .count {
+    color: #8e979e;
+    font-weight: normal;
+  }
 
   li {
     float: left;
 
     & + li a {
-      border-left-width: 0;
+      border-radius: 0;
+      margin-left: -1px;
     }
 
     &:first-child a {
